--- a/style.css
+++ b/style.css
@@ -10,8 +10,12 @@
 :root {
     --dark-color: #2d2c2c;
     --blue-solid: #0a104f;
-    --blue-transparent: rgba(0, 0, 125, 0.9);
+    --blue-transparent: rgba(0, 0, 125, 0.7);
     --blue-transparent-alt: rgba(0, 0, 125, 0.5);
+    --blue-light: #0d3fbd;
+    --orange-solid: #ff9008;
+    --gradient-color: linear-gradient(to right, var(--orange-solid), var(--blue-light));
+    --gradient-color-alt: linear-gradient(to right, var(--blue-light), var(--orange-solid));
 }
 
 html {
@@ -81,14 +85,6 @@ header {
     display: none
 }
 
-.menu-open .hamburger-menu .fa-times {
-    display: block;
-}
-
-.menu-open .hamburger-menu .fa-bars {
-    display: none;
-}
-
 .nav-list {
     display: flex;
     position: fixed;
@@ -111,6 +107,14 @@ header {
     transform: scale(1);
 }
 
+.menu-open .hamburger-menu .fa-times {
+    display: block;
+}
+
+.menu-open .hamburger-menu .fa-bars {
+    display: none;
+}
+
 .nav-item:not(:last-child) {
     margin-bottom: 0.5rem;
 }
@@ -123,4 +127,76 @@ header {
     text-transform: uppercase;
     letter-spacing: 2px;
     padding: 1rem;
+}
+
+
+/* explore section */
+
+.explore {
+    width: 100%;
+    height: 100vh;
+    background: url("./assets/split-2.jpg") center no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    z-index: 0;
+}
+
+.explore::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: inherit;
+    height: inherit;
+    background-color: var(--blue-transparent-alt);
+    z-index: -1;
+}
+
+.explore-heading {
+    color: #fff;
+    line-height: 1.3;
+    text-shadow: 1px 1px 1rem rgba(0, 0, 0, 0.5);
+    margin-bottom: 2rem;
+}
+
+.title {
+    font-size: 4.5rem;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+.subtitle {
+    font-size: 2.5rem;
+    font-weight: 200;
+    font-family: 'Courgette', cursive;
+}
+
+.button {
+    color: #fff;
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 0.5rem 3.5rem;
+    border: none;
+    border-radius: 10rem;
+    display: inline-flex;
+    align-items: center;
+}
+
+.button-gradient {
+    background-image: var(--gradient-color);
+    font-family: 'Open Sans', sans-serif;
+}
+
+.button-gradient:hover {
+    background-image: var(--gradient-color-alt);
+}
+
+.dots {
+    font-size: 2rem;
+    margin-left: 1.5rem;
+    opacity: 0.7;
 }
