--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Courgette|Open+Sans:400,800&display=swap');
 *,
 *::before,
 *::after {
@@ -14,8 +13,10 @@
     --blue-transparent-alt: rgba(0, 0, 125, 0.5);
     --blue-light: #0d3fbd;
     --orange-solid: #ff9008;
-    --gradient-color: linear-gradient(to right, var(--orange-solid), var(--blue-light));
-    --gradient-color-alt: linear-gradient(to right, var(--blue-light), var(--orange-solid));
+    --gradient-color-right: linear-gradient(to right, var(--orange-solid), var(--blue-light));
+    --gradient-color-alt-right: linear-gradient(to right, var(--blue-light), var(--orange-solid));
+    --gradient-color-left: linear-gradient(to right, var(--blue-light), var(--orange-solid));
+    --gradient-color-alt-left: linear-gradient(to right, var(--orange-solid), var(--blue-light));
 }
 
 html {
@@ -186,17 +187,69 @@ header {
     align-items: center;
 }
 
-.button-gradient {
-    background-image: var(--gradient-color);
+.button-gradient-right {
+    background-image: var(--gradient-color-right);
     font-family: 'Open Sans', sans-serif;
 }
 
-.button-gradient:hover {
-    background-image: var(--gradient-color-alt);
+.button-gradient-right:hover {
+    background-image: var(--gradient-color-alt-right);
 }
 
 .dots {
     font-size: 2rem;
     margin-left: 1.5rem;
     opacity: 0.7;
+}
+
+
+/* booking section */
+
+.booking {
+    background-image: var(--gradient-color-right);
+}
+
+.input-group {
+    margin-bottom: 1.1rem;
+}
+
+.input-label {
+    display: block;
+    color: #fff;
+    font-size: 1.3rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+}
+
+.input,
+.options {
+    outline: none;
+    border: none;
+    width: 100%;
+    min-height: 2.2rem;
+    padding: 1rem;
+    font-weight: bold;
+    color: #766e6eb8;
+    letter-spacing: 2px;
+    font-family: "Open Sans", sans-serif;
+    /* resize: none; */
+}
+
+.form {
+    align-items: center;
+    text-align: center;
+}
+
+.button-form {
+    margin-top: 2rem;
+}
+
+.button-gradient-left {
+    background-image: var(--gradient-color-left);
+    font-family: 'Open Sans', sans-serif;
+}
+
+.button-gradient-left:hover {
+    background-image: var(--gradient-color-alt-left);
 }
