--- a/style.css
+++ b/style.css
@@ -244,14 +244,14 @@ header {
     margin-top: 2rem;
 }
 
-.button-search {
+.button-blue {
     background-color: #fff;
     color: var(--blue-light);
     font-family: 'Open Sans', sans-serif;
     padding: 0.5rem 8rem;
 }
 
-.button-search:hover {
+.button-blue:hover {
     background-color: var(--blue-light);
     color: #fff;
     transform: scale(1.1);
@@ -305,6 +305,7 @@ header {
     margin: 1rem;
     position: relative;
     z-index: 0;
+    box-shadow: 0 10px 20px rgb(0, 0, 0, 0.3);
 }
 
 .featured-apartment::before {
@@ -316,6 +317,12 @@ header {
     height: 100%;
     background-color: var(--blue-transparent-alt);
     z-index: -1;
+}
+
+.featured-apartment:hover {
+    box-shadow: 0 10px 20px rgb(0, 0, 0, 0.6);
+    transform: scale(1.01);
+    ;
 }
 
 .apartment-name {
@@ -343,7 +350,7 @@ header {
 }
 
 .offer-content {
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.7);
     text-align: center;
     padding: 5rem 1rem;
     position: relative;
@@ -365,4 +372,53 @@ header {
 .offer-text {
     color: #a5a5a5;
     margin-bottom: 2.5rem;
+}
+
+
+/* contact */
+
+.contact-content {
+    display: flex;
+    justify-content: center;
+}
+
+.traveler-wrap {
+    display: none;
+}
+
+.contact-form {
+    width: 100%;
+    background-image: var(--gradient-color);
+    padding: 3rem;
+}
+
+.contact-form .input {
+    display: block;
+    background-color: transparent;
+    color: #fff;
+    font-weight: normal;
+    border-bottom: 2px solid #fff;
+    padding-left: 0;
+}
+
+.bar {
+    display: block;
+    position: relative;
+}
+
+.bar::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 3px;
+    background-color: var(--blue-transparent);
+    transform: scaleX(0);
+    transition: transform 0.5s;
+    transform-origin: left;
+}
+
+.contact-form .input:focus+.bar::after {
+    transform: scaleX(1);
 }
